# llama.cpp_backends

./: .gitignore  .gitmodules  CMakeLists.txt
apps/cli/: main.cpp
backends/dummy_backend/: dummy_backend.cpp
backends/llama.cpp_custom/: CMakeLists.txt
backends/llama.cpp_custom/common/: CMakeLists.txt
backends/llama.cpp_custom/src/: CMakeLists.txt
backends/llama.cpp_custom/tests/: CMakeLists.txt
backends/stable-diffusion.cpp_custom/: CMakeLists.txt
include/backends/: backend.h
include/runtime/: backend_registry.h  model.h  tensor.h
include/runtime/dsipatcher/: runner.cpp
runtime/dsipatcher/: runner.cpp
runtime/registry/: backend_registry.cpp
